--- a/notebook/config.yaml
+++ b/notebook/config.yaml
@@ -3,6 +3,7 @@ track_width: 10.0  # Breite der Strecke
 segment_length: 5.0 # Länge eines einzelnen Tracksegments für zufällige Generierung
 turn_angle_max: 45  # Maximaler Kurvenwinkel in Grad für zufällige Generierung
 num_segments_random: 20 # Anzahl der Segmente für einen zufälligen Track
+max_closing_length_factor: 1.5  # Maximales Verhältnis der Schließungslänge zur durchschnittlichen Segmentlänge
 
 # Farben für die Darstellung
 color_centerline: 'black'
@@ -17,3 +18,10 @@ csv_delimiter: ','
 # Pfade sind relativ zum notebook-Verzeichnis oder absolut
 script_path_example: '/workspaces/sdsandbox/notebook/tracks/scripted_track1.txt'
 csv_path_example: '/workspaces/sdsandbox/notebook/tracks/centerline1.csv'
+
+# Konfiguration für Kreisbogensegmente in zufälligen Tracks
+curve_types_random: ['straight_turn', 'arc']  # Mögliche Segmenttypen
+arc_radius_min: 5.0  # Minimaler Radius für einen Bogen
+arc_radius_max: 20.0  # Maximaler Radius für einen Bogen
+arc_angle_max: 90.0  # Maximaler Winkel (in Grad) für ein Bogensegment
+arc_num_points: 10  # Anzahl der Punkte zur Approximation eines Bogens
